Added plot details

--- a/visualization/draw_mean_variance.ipynb
+++ b/visualization/draw_mean_variance.ipynb
@@ -441,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -993,6 +993,11 @@
     "    plt.scatter(traj_pred[i, -1, 0], traj_pred[i, -1, 1], \n",
     "                    marker='*', \n",
     "                    color='red',s=60, alpha=1, zorder=120)\n",
+    "    \n",
+    "    plt.xlabel(\"X Position (meters?)\")  \n",
+    "    plt.ylabel(\"Y Position (meters?\"))  \n",
+    "    plt.title(f\"Trajectory Visualization - Frame {idx}\")  \n",
+    "    plt.legend([\"Ground Truth (Past)\", \"Ground Truth (Future)\", \"Prediction\"], loc=\"upper right\")   \n",
     "    \n",
     "    # plt.plot(traj_mean[:19, 0], traj_mean[:19, 1],\n",
     "    #             linestyle='-', markersize=4, marker=\"o\", alpha=1,\n",
